Add Google Search Console verification and SEO optimization

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="N3DxCcjbvKkZjgNPWFzQ8XsKadWy4_JY3n221Uf5jPg" />
 
     <!-- Primary SEO Meta Tags -->
     <title>UIU CGPA and Tuition Fees Calculator | Smart UIU - United International University</title>
