Update canonical and Open Graph URLs

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <meta name="language" content="English">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://argha5.github.io/uiucgpa-tutionfees/">
+    <link rel="canonical" href="https://uiu-cgpa.pages.dev/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://argha5.github.io/uiucgpa-tutionfees/">
+    <meta property="og:url" content="https://uiu-cgpa.pages.dev/">
     <meta property="og:title" content="UIU CGPA and Tuition Fees Calculator | Smart UIU">
     <meta property="og:description"
         content="Free online UIU CGPA and tuition fees calculator for United International University students. Calculate your CGPA with retake support, view grading policy, and calculate tuition fees with waiver and installment breakdown.">
@@ -30,7 +30,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://argha5.github.io/uiucgpa-tutionfees/">
+    <meta property="twitter:url" content="https://uiu-cgpa.pages.dev/">
     <meta property="twitter:title" content="UIU CGPA and Tuition Fees Calculator | Smart UIU">
     <meta property="twitter:description"
         content="Free online UIU CGPA and tuition fees calculator for United International University students. Calculate your CGPA with retake support, view grading policy, and calculate tuition fees with waiver and installment breakdown.">
