Add canonical link and Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://uiu-cgpa.pages.dev/" />
+
 <meta name="google-site-verification" content="U72GpDoKoSklad-QIg4oQV8APHTdfL3C0y7-gPl4IUQ" />
     <!-- Primary SEO Meta Tags -->
     <title>UIU CGPA and Tuition Fees Calculator | Smart UIU - United International University</title>
