Fix Google indexing - enforce canonical URL

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://uiu-cgpa.pages.dev/" />
 
+    <!-- Canonical URL - Primary page identifier -->
+    <link rel="canonical" href="https://uiu-cgpa.pages.dev/" />
+    <link rel="alternate" hreflang="en" href="https://uiu-cgpa.pages.dev/" />
+
+    <!-- Prevent duplicate indexing -->
     <meta name="google-site-verification" content="U72GpDoKoSklad-QIg4oQV8APHTdfL3C0y7-gPl4IUQ" />
     <!-- Primary SEO Meta Tags -->
     <title>UIU CGPA and Tuition Fees Calculator | Smart UIU - United International University</title>
