--- a/redirect.html
+++ b/redirect.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- Prevent indexing of redirect page -->
+    <meta name="robots" content="noindex, nofollow">
     <meta http-equiv="refresh" content="0; url=https://uiu-cgpa.pages.dev/">
     <link rel="canonical" href="https://uiu-cgpa.pages.dev/" />
     <title>Redirecting...</title>
